--- a/main.css
+++ b/main.css
@@ -1,118 +1,120 @@
-a,
-a:active,
-a:visited {
-  color: #222222;
-  font-weight: bold;
-  text-decoration: underline;
-}
-a:hover {
-  color: #222222;
-  text-decoration: none;
-  cursor: default;
-  background-color: #fcdf38;
-}
 body {
-  background-color: #ffffff;
-  font-family: "Source Sans Pro";
-  color: #222222;
-  margin-top: 10%;
-  margin-left: 10%;
-  font-size: 16pt;
+    background-color: #eeeeee;
+    color: #444444;
+    font-family: "Source Sans Pro";
+    font-size: 20pt;
+    margin-top: 10%;
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin-top: 10px;
-  margin-bottom: 10px;
+h1, h2, h3, h4, h5, h6 {
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 h1 {
-  font-family: Georgia, "Times New Roman";
-  font-size: 56pt;
-  color: #ff6699;
+    color: #a1dea1;
+    font-family: Georgia, "Times New Roman";
+    font-size: 60pt;
 }
 h2 {
-  color: #999999;
-  font-weight: normal;
-  font-size: 16pt;
+    color: #666666;
 }
 h3 {
-  font-weight: bold;
-  font-family: "Anonymous Pro";
-  font-size: 24pt;
-  box-shadow: inset 0 0px 0 transparent, inset 0 -16px 0 #fcdf38;
+    box-shadow: inset 0 0px 0 transparent, inset 0 -18pt 0 #a1dea1;
+    color: #09214f;
+    font-size: 32pt;
 }
 h4 {
-  font-weight: bold;
-  font-family: "Anonymous Pro";
-  text-align: right;
-  background-color: rgba(0, 0, 0, 0.1);
-}
-h5 {
-  font-family: "Anonymous Pro";
-  font-weight: lighter;
-  font-size: 14pt;
-}
-h6 {
-  color: #888888;
-  font-size: 12pt;
+    box-shadow: inset 0 0px 0 transparent, inset 0 -18px 0 #dddddd;
+    color: #09214f;
+    font-family: Georgia, "Times New Roman";
+    font-size: 22pt;
+    font-weight: bold;
+    text-align: center;
 }
 footer,
 header,
 main {
-  margin-left: 13%;
-  width: 45%;
+    float: none;
+    margin-left: 17%;
+    width: 60%;
 }
-
+footer {
+    padding-left: 40px;
+    padding-right: 40px;
+    text-align: center;
+}
 header {
-  text-align: right;
-}
-hr {
-  margin-top: 30px;
-  margin-bottom: 30px;
-  background-color: rgba(255, 102, 153, 0.7);
-  height: 2px;
-  border: none;
-  width: 200px;
+    padding-left: 80px;
+    text-align: right;
 }
 main {
-  float: none;
+    background-color: #ffffff;
+    border: 20px solid #09214f;
+    padding: 20px;
 }
 p {
-  margin-top: 15px;
-  margin-bottom: 15px;
-  line-height: 18pt;
-  text-align: justify;
+    color: inherit;
+    font-weight: lighter;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    padding: 2pt;
+}
+footer p {
+    color: #666666;
+    font-size: 14pt;
+    line-height: 12pt;
+}
+main p {
+    line-height: 24pt;
+    text-align: justify;
+}
+hr {
+    background-color: #a1dea1;
+    border: none;
+    height: 3px;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    width: 200px;
 }
 ul {
-  margin-top: 0px;
-  margin-bottom: 0px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+a,
+a:active,
+a:visited {
+    color: #09214f;
+    font-weight: bold;
+    text-decoration: underline;
+}
+a:hover {
+    background-color: #eeeeee;
+    color: #a1dea1;
+    cursor: default;
+    text-decoration: none;
 }
 .infobar {
-  width: 12%;
-  float: left;
-  font-size: 18pt;
-  line-height: 32px;
+    float: left;
+    font-family: Georgia, "Times New Roman";
+    font-size: 20pt;
+    line-height: 26pt;
+    text-align: right;
+    width: 16%;
 }
 .infobar a,
 .infobar a:active,
 .infobar a:visited {
-  color: #333333;
-  font-weight: bold;
-  text-decoration: none;
-  box-shadow: inset 0 0px 0 transparent,
-    inset 0 -12px 0 rgba(255, 102, 153, 0.7);
+    box-shadow: inset 0 0px 0 transparent, inset 0 -12pt 0 #a1dea1;
+    color: #09214f;
+    font-weight: bold;
+    text-decoration: none;
 }
 .infobar a:hover {
-  text-decoration: none;
-  cursor: default;
-  box-shadow: inset 0 0px 0 transparent, inset 0 -28px 0 rgba(255, 102, 153, 0.9);
-  background-color: transparent;
-  color: #fcdf38;
+    background-color: transparent;
+    box-shadow: inset 0 0px 0 transparent, inset 0 -30pt 0 #09214f;
+    color: #ffffff;
+    cursor: default;
+    text-decoration: none;
 }
 .infobar ul {
-  list-style-type: none;
-  text-align: right;
+    list-style-type: none;
 }
