--- a/static/main.css
+++ b/static/main.css
@@ -5,23 +5,28 @@ body {
     font-size: 20pt;
     margin-top: 10%;
 }
+
 h1, h2, h3, h4, h5, h6 {
     margin-bottom: 10px;
     margin-top: 10px;
 }
+
 h1 {
     color: #a1dea1;
     font-family: Georgia, "Times New Roman";
     font-size: 60pt;
 }
+
 h2 {
     color: #666666;
 }
+
 h3 {
     box-shadow: inset 0 0px 0 transparent, inset 0 -18pt 0 #a1dea1;
     color: #09214f;
     font-size: 32pt;
 }
+
 h4 {
     box-shadow: inset 0 0px 0 transparent, inset 0 -18px 0 #dddddd;
     color: #09214f;
@@ -30,6 +35,7 @@ h4 {
     font-weight: bold;
     text-align: center;
 }
+
 footer,
 header,
 main {
@@ -37,36 +43,43 @@ main {
     margin-left: 17%;
     width: 60%;
 }
+
 footer {
     padding-left: 40px;
     padding-right: 40px;
     text-align: center;
 }
+
 header {
     padding-left: 80px;
     text-align: right;
 }
+
 main {
     background-color: #ffffff;
     border: 20px solid #09214f;
     padding: 20px;
 }
+
 p {
-    color: inherit;
     font-weight: lighter;
     margin-bottom: 10px;
     margin-top: 10px;
     padding: 2pt;
 }
+
 footer p {
     color: #666666;
+    font-weight: lighter;
     font-size: 14pt;
     line-height: 12pt;
 }
+
 main p {
     line-height: 24pt;
     text-align: justify;
 }
+
 hr {
     background-color: #a1dea1;
     border: none;
@@ -75,10 +88,35 @@ hr {
     margin-top: 30px;
     width: 200px;
 }
+
 ul {
     margin-top: 0px;
     margin-bottom: 0px;
 }
+
+section {
+    text-align: center;
+}
+
+figure {
+    margin: 10px 0px;
+    width: 30%;
+    text-align: center;
+    display: inline-grid;
+}
+
+img {
+    width: 90%;
+    border: 3px solid #a1dea1;
+}
+
+figcaption {
+    width: 90%;
+    text-align: center;
+    font-weight: bold;
+    font-size: 14pt;
+}
+
 a,
 a:active,
 a:visited {
@@ -86,12 +124,14 @@ a:visited {
     font-weight: bold;
     text-decoration: underline;
 }
+
 a:hover {
     background-color: #eeeeee;
     color: #a1dea1;
     cursor: default;
     text-decoration: none;
 }
+
 .infobar {
     float: left;
     font-family: Georgia, "Times New Roman";
@@ -100,6 +140,7 @@ a:hover {
     text-align: right;
     width: 16%;
 }
+
 .infobar a,
 .infobar a:active,
 .infobar a:visited {
@@ -108,6 +149,7 @@ a:hover {
     font-weight: bold;
     text-decoration: none;
 }
+
 .infobar a:hover {
     background-color: transparent;
     box-shadow: inset 0 0px 0 transparent, inset 0 -30pt 0 #09214f;
@@ -115,6 +157,7 @@ a:hover {
     cursor: default;
     text-decoration: none;
 }
+
 .infobar ul {
     list-style-type: none;
 }
