--- a/static/main.css
+++ b/static/main.css
@@ -1,184 +1,190 @@
 body {
-    background-color: #eeeeee;
-    color: #444444;
-    font-family: "Source Sans Pro";
-    font-size: 18pt;
-    margin-top: 10%;
+  background-color: #eeeeee;
+  color: #444444;
+  font-family: "Source Sans Pro";
+  font-size: 18pt;
+  margin-top: 10%;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    margin-bottom: 10px;
-    margin-top: 10px;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 h1 {
-    color: #a1dea1;
-    font-family: Georgia, "Times New Roman";
-    font-size: 60pt;
+  color: #a1dea1;
+  font-family: Georgia, "Times New Roman";
+  font-size: 60pt;
 }
 
 h2 {
-    color: #666666;
+  color: #666666;
 }
 
 h3 {
-    box-shadow: inset 0 0px 0 transparent, inset 0 -18pt 0 #a1dea1;
-    color: #09214f;
-    font-size: 32pt;
+  box-shadow: inset 0 0px 0 transparent, inset 0 -18pt 0 #a1dea1;
+  color: #09214f;
+  font-size: 32pt;
 }
 
 h4 {
-    box-shadow: inset 0 0px 0 transparent, inset 0 -18px 0 #dddddd;
-    color: #09214f;
-    font-family: Georgia, "Times New Roman";
-    font-size: 22pt;
-    font-weight: bold;
-    text-align: center;
+  box-shadow: inset 0 0px 0 transparent, inset 0 -18px 0 #dddddd;
+  color: #09214f;
+  font-family: Georgia, "Times New Roman";
+  font-size: 22pt;
+  font-weight: bold;
+  text-align: center;
 }
 
 h5 {
-    border-bottom: 8px solid #a1dea1;
-    display: inline-block;
-    line-height: 0.85;
-    color: #09214f;
-    font-family: Georgia, "Times New Roman";
-    font-size: 20pt;
-    font-weight: bold;
-    text-align: left;
+  border-bottom: 8px solid #a1dea1;
+  display: inline-block;
+  line-height: 0.85;
+  color: #09214f;
+  font-family: Georgia, "Times New Roman";
+  font-size: 20pt;
+  font-weight: bold;
+  text-align: left;
 }
 
 footer,
 header,
 main {
-    float: none;
-    margin-left: 17%;
-    width: 60%;
+  float: none;
+  margin-left: 17%;
+  width: 60%;
 }
 
 footer {
-    padding-left: 40px;
-    padding-right: 40px;
-    text-align: center;
+  padding-left: 40px;
+  padding-right: 40px;
+  text-align: center;
 }
 
 header {
-    padding-left: 80px;
-    text-align: right;
+  padding-left: 80px;
+  text-align: right;
 }
 
 main {
-    background-color: #ffffff;
-    border: 20px solid #09214f;
-    padding: 20px;
+  background-color: #ffffff;
+  border: 20px solid #09214f;
+  padding: 20px;
 }
 
 p {
-    font-weight: lighter;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    padding: 2pt;
+  font-weight: lighter;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  padding: 2pt;
 }
 
 footer p {
-    color: #666666;
-    font-weight: lighter;
-    font-size: 14pt;
-    line-height: 12pt;
+  color: #666666;
+  font-weight: lighter;
+  font-size: 14pt;
+  line-height: 12pt;
 }
 
 main p {
-    line-height: 24pt;
-    text-align: justify;
+  line-height: 24pt;
+  text-align: justify;
 }
 
-section p, article p {
-    font-weight: lighter;
-    font-size: 16pt;
+section p,
+article p {
+  font-weight: lighter;
+  font-size: 16pt;
 }
 
 hr {
-    background-color: #a1dea1;
-    border: none;
-    height: 3px;
-    margin-bottom: 30px;
-    margin-top: 30px;
-    width: 200px;
+  background-color: #a1dea1;
+  border: none;
+  height: 3px;
+  margin-bottom: 30px;
+  margin-top: 30px;
+  width: 200px;
 }
 
 ul {
-    margin-top: 0px;
-    margin-bottom: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 section {
-    text-align: center;
+  text-align: center;
 }
 
 figure {
-    margin: 10px 0px;
-    width: 30%;
-    text-align: center;
-    display: inline-grid;
+  margin: 10px 0px;
+  width: 30%;
+  text-align: center;
+  display: inline-grid;
 }
 
 img {
-    width: 90%;
-    border: 3px solid #a1dea1;
+  border: 3px solid #a1dea1;
+  width: 90%;
 }
 
 figcaption {
-    width: 90%;
-    text-align: center;
-    font-weight: bold;
-    font-size: 14pt;
+  width: 90%;
+  text-align: center;
+  font-weight: bold;
+  font-size: 14pt;
 }
 
 iframe {
-    height: 225px;
-    width: 400px;
+  height: 225px;
+  width: 400px;
 }
 
 a,
 a:active,
 a:visited {
-    color: #09214f;
-    font-weight: bold;
-    text-decoration: underline;
+  color: #09214f;
+  font-weight: bold;
+  text-decoration: underline;
 }
 
 a:hover {
-    background-color: #eeeeee;
-    color: #a1dea1;
-    cursor: default;
-    text-decoration: none;
+  background-color: #eeeeee;
+  color: #a1dea1;
+  cursor: default;
+  text-decoration: none;
 }
 
 .infobar {
-    float: left;
-    font-family: Georgia, "Times New Roman";
-    font-size: 20pt;
-    line-height: 26pt;
-    text-align: right;
-    width: 16%;
+  float: left;
+  font-family: Georgia, "Times New Roman";
+  font-size: 20pt;
+  line-height: 26pt;
+  text-align: right;
+  width: 16%;
 }
 
 .infobar a,
 .infobar a:active,
 .infobar a:visited {
-    box-shadow: inset 0 0px 0 transparent, inset 0 -12pt 0 #a1dea1;
-    color: #09214f;
-    font-weight: bold;
-    text-decoration: none;
+  box-shadow: inset 0 0px 0 transparent, inset 0 -12pt 0 #a1dea1;
+  color: #09214f;
+  font-weight: bold;
+  text-decoration: none;
 }
 
 .infobar a:hover {
-    background-color: transparent;
-    box-shadow: inset 0 0px 0 transparent, inset 0 -30pt 0 #09214f;
-    color: #ffffff;
-    cursor: default;
-    text-decoration: none;
+  background-color: transparent;
+  box-shadow: inset 0 0px 0 transparent, inset 0 -30pt 0 #09214f;
+  color: #ffffff;
+  cursor: default;
+  text-decoration: none;
 }
 
 .infobar ul {
-    list-style-type: none;
+  list-style-type: none;
 }
